2005-02-16  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-02-15  Mark Wielaard  <mark@klomp.org>

        * javax/net/ssl/SSLContext.java (getInstance): Add exception message
        and/or cause before throwing.

2005-02-16  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-02-15  Mark Wielaard  <mark@klomp.org>

        * java/net/URLClassLoader.java (JarURLLoader.JarURLLoader): Just use
        space for parsing CLASS_PATH attribute.

	2005-02-15  Andrew Haley  <aph@redhat.com>

        * java/net/URLClassLoader.java
        (URLLoader.getClassPath): New method.
        (JarURLLoader.JarURLLoader): Read mainfest to parse "Class-Path"
        attribute and add URLs for each entry.
        (JarURLLoader.classPath): New field.
        (JarURLLoader.getClassPath): New method.
        (addURLImpl): Scan through the list of extraUrls in the new
        loader, adding them to our urlinfos.
        (definePackage, findURLResource, findResources): Use
        urlinfos.size(), not urls.size().

2005-02-16  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-02-14  Mark Wielaard  <mark@klomp.org>

        * java/net/URLClassLoader.java (findClass): Throw
        ClassNotFoundExceptions including urls, plus parent using toString().
        (thisString): New field.
        (toString): New method.

        * java/lang/ClassLoader (defaultGetSystemClassLoader): Only install
        ExtensionClassLoader when there are actual extension URLs.

2005-02-16  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-02-14  Tom Tromey  <tromey@redhat.com>

        * java/net/URLClassLoader.java (URLLoader(URLClassLoader, URL,
        URL)): New constructor.

2005-02-16  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU inetlib.

	2005-02-14  Kai Mueller  <kai@faldal.mine.nu>

        * SMTPConnection.java: Define SP as character 0x20.

2005-02-15  Guilhem Lavaux  <guilhem@kaffe.org>
